# label-studio-deploy

./: .env.example  .gitignore  README.md  docker-compose.yml
.pi/: profile-extension-state.json  profiles.json  settings.json
.pi/skills/label-studio-ml/: SKILL.md
.pi/skills/label_studio_ml/: SKILL.md
docs/plans/2026-05-08-sam3-ml-backend/: design.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  plan.md
label_studio_ml/sam3/: Dockerfile  requirements.txt
ml-backend/: .gitignore
ml-backend/yolo/: .env.example
ml-backend/yolo/data/server/models/: cache.db
ml_backend/examples/grounding_dino/: docker-compose.local.yml
ml_backend/examples/grounding_sam/: dino.py
ml_backend/sam3/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  model.py  pyproject.toml  requirements.txt  sam3_example.py  test_api.py
ml_backend/sam3/tests/: fixtures.py
ml_backend/yolo/: docker-compose.yml
ml_backend/yolo/control_models/: base.py
