[project]
name = "segmentation-anything-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "requests>=2.28.2",
    "scipy>=1.13.1",
    "setuptools<82",
    "torch==2.10.0",
    "torchvision",
    "wheel>=0.46.3",
    "timm>=1.0.17",
    "tqdm",
    "ftfy==6.1.1",
    "regex",
    "iopath>=0.1.10",
    "typing_extensions",
    "huggingface-hub",
    "sam3",
    "einops>=0.8.2",
    "ninja>=1.13.0",
    "transformers>=5.8.0",
    "gunicorn==22.0.0",
    "label-studio-ml>=1.0.9",
    "label-studio-sdk<=2.0.16",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
]
no-build-isolation = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
onnx-graphsurgeon = { index = "nvidia" }
sam3 = { git = "https://github.com/facebookresearch/sam3.git" }
label-studio-ml = { git = "https://github.com/hiennguyen9874/label-studio-ml-backend" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.ngc.nvidia.com"
explicit = true

[tool.uv.extra-build-dependencies]
basicsr = ["wheel"]
mmcv-full = ["wheel"]
git = ["wheel"]

[dependency-groups]
dev = [
  "matplotlib",
  "jupyter",
  "notebook",
  "ipywidgets",
  "ipycanvas",
  "ipympl",
  "pycocotools",
  "decord",
  "opencv-python",
  "einops",
  "scikit-image",
  "scikit-learn",
  "pandas>=3.0.2",
]
